added repository, web service and others

--- a/app/src/main/res/layout/country_list_fragment.xml
+++ b/app/src/main/res/layout/country_list_fragment.xml
@@ -6,13 +6,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".ui.main.CountryListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/country_list_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
     </androidx.recyclerview.widget.RecyclerView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="visible">
+    </ProgressBar>
 
 
 </FrameLayout>
