happy path with list of countries complete

--- a/app/src/main/res/layout/country_cell.xml
+++ b/app/src/main/res/layout/country_cell.xml
@@ -20,14 +20,18 @@
 
     <TextView
         android:id="@+id/countryLabelTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:maxLines="4"
         android:layout_marginBottom="8dp"
+        android:gravity="left"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"xXX
         app:layout_constraintStart_toEndOf="@+id/flagImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
