--- a/app/src/main/res/layout/country_details_fragment.xml
+++ b/app/src/main/res/layout/country_details_fragment.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/province_frame"
     android:layout_width="match_parent"
+    android:background="#AFAFAF"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     tools:context=".ui.main.CountryListFragment">
@@ -26,5 +27,41 @@
         android:visibility="visible">
     </ProgressBar>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:id="@+id/error_layout"
+        android:weightSum="2"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/error_textview"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            >
+        </TextView>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_gravity="center"
+                android:id="@+id/retry_button"
+                android:text="@string/retry"
+                >
+
+            </Button>
+        </FrameLayout>
+    </LinearLayout>
 
 </FrameLayout>
