--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,9 @@
             android:name="Id"
             app:argType="integer"
             android:defaultValue="-1" />
+        <argument
+            android:name="Country"
+            app:argType="string"
+            android:defaultValue="" />
     </fragment>
 </navigation>
